golden/error/runtime_listcomp_condition_not_bool.test
[if 0: "false"]

# output:
 --> stdin:1:4
  |
1 | [if 0: "false"]
  |     ^
Error: Condition should be a boolean.
